--- a/index.html
+++ b/index.html
@@ -267,7 +267,11 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 								
-								<p>I am an Engineering graduate with a passion for programming, especially in web development and mobile applications and experience in Logistics. I work well in teams and am open to new experiences.</p>
+								<p>With an educational background in chemical engineering and full-stack programming, I offer a
+									versatile skill set further honed through a history of diverse work roles in humanitarian aid and
+									business development. Adaptable and resilient, I thrive in active and dynamic environments,
+									eagerly embracing new challenges. Driven by my newfound yet deep interest in programming and
+									web development, I am keen to apply my skills and expand my experience in the IT sector.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Language:</span> <span>Javascript &amp; Typescript</li>
 									<li class="d-flex"><span>Testing:</span> <span>Jest &amp; Supertest</span></li>
@@ -434,7 +438,7 @@
 				  </video>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql">HeartSync Real-Time Chat</a></h3>
+                <h3 class="heading"><a href="https://github.com/HeartSync-Konohagakure/HeartSync">HeartSync Real-Time Chat</a></h3>
                 <p>Created Dating app with real-time chat with RESTful API for seamless and interactive user connections.<br/> Techstack: React &amp; Socket.Io </p>
               </div>
             </div>
@@ -447,7 +451,7 @@
 				  </video>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg">KitchenMate</a></h3>
+                <h3 class="heading"><a href="https://github.com/FinalProject-KitchenMate/KitchenMate">KitchenMate</a></h3>
                 <p>"Kitchen Mate" describes an application as a buddy that assists in managing and cooking in the kitchen. Make life easier with #kitchenMate! <br/> Techstack: NextJS, OpenAI &amp; SpoonacularAI </p>
               </div>
             </div>
